# Swin_transformer_UPennGBM

./: .gitignore  LICENSE  README.md  calibration_model.ipynb  combined_models.ipynb  data_set_copy_cases.py  evaluate_upenn_models.ipynb  evaluation.ipynb  load_upenn_gbm.ipynb  pipeline.ipynb  pipeline_not_sliding.ipynb  pyproject.toml  re_train_swin.py  requirements.txt  simple_inference.ipynb  temperature.py  temperature2.py  train_swin_with_upenn.py  upload_model_to_wandb.py  use_contrastive.ipynb  ver_transformaciones.ipynb  visualizar_slices.py
src/: config.py  custom_transforms.py  data_analysis.py  get_data.py  utils.ipynb  visualizar.py
