[tool.poetry]
name = "unsup-seg-gbm"
version = "0.1.0"
description = ""
authors = ["amulet1989 <muletdelosreyes89@gmail.com>"]
readme = "README.md"
packages = [{include = "unsup_seg_gbm"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
nibabel = "^5.1.0"
medpy = "^0.4.0"
torch = "^2.0.1"
scikit-learn = "^1.2.2"
torchio = "^0.18.92"
matplotlib = "^3.7.1"
nilearn = "^0.10.1"
monai = "^1.2.0"
wandb = "^0.15.10"
pydicom = "^2.4.3"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
